# benchmarks

./: .gitignore
benchs/cpp/copy/: CMakeLists.txt  bench.cu  bench_NVIDIA_A100_80GB_PCIe_copy.tsv
benchs/cpp/copy/cutlass/: cutlass_copy.cuh
benchs/cpp/copy/tiledcuda/: tiledcuda_copy.cuh
benchs/cpp/gemm/: CMakeLists.txt  bench.cu  bench_NVIDIA_A100_80GB_PCIe_gemm.tsv  bench_NVIDIA_A100_80GB_PCIe_gemm_v2.tsv  bench_v2.cu  cutlass_gemm.cuh  tiledcuda_gemm.cuh  util.cuh
benchs/cpp/gemm/figures/: bench_NVIDIA_A100_80GB_PCIe_gemm.tsv
benchs/cpp/gemm/tiledcuda/: tiledcuda_gemm.cuh
benchs/fused_gemm/tiledcuda/: compile.py  entry.py  fused_gemm.py
benchs/gemm/: bench.py  gemm_bench_NVIDIA_A100_80GB_PCIe.csv
benchs/gemm/cutlass/: compile.py  gemm.py
benchs/gemm/tiledcuda/: compile.py  entry.py  m4096n4096k4096_NVIDIA_A100_80GB_PCIe.tsv  run.sh  test.py
benchs/gemm/tiledcuda/logs/: m4096n4096k4096_NVIDIA_A100_80GB_PCIe.tsv  m4096n4096k4096_NVIDIA_RTX_A6000.tsv
benchs/gemm/triton/: gemm.py  test.py
benchs/python/gemm/: bench.py  gemm_bench_NVIDIA_A100_80GB_PCIe.csv
benchs/python/gemm/cuBLAS/: __init__.py
benchs/python/gemm/cuBLAS/src/: CMakeLists.txt
benchs/python/gemm/cutlass/: compile.py
benchs/python/gemm/tiledcuda/: compile.py  gemm.py
gemm/cuBLAS/: test.py
gemm/cutlass/: test.py
gemm/tiledcuda/: compile.py  test.py
utils/cpp/: cuda_info.cuh  cuda_timer.cuh
